Updated Visual Studio defines

--- a/ldtkimport.props
+++ b/ldtkimport.props
@@ -2,10 +2,9 @@
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemDefinitionGroup Condition="'$(Configuration)'=='Debug'">
     <ClCompile>
-      <PreprocessorDefinitions>LDTK_IMPORT_DEBUG_RULE=1;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>LDTK_IMPORT_DEBUG_RULE=2;LDTK_ASSERTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
   </ItemDefinitionGroup>
-  
   <ItemDefinitionGroup>
     <ClCompile>
       <AdditionalIncludeDirectories>$(MSBuildThisFileDirectory)..\ldtkimport\include\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
